--- a/RandomTvShow/Form1.resx
+++ b/RandomTvShow/Form1.resx
@@ -120,96 +120,28 @@
   <metadata name="splitContainer1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="splitContainer5.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="splitContainer1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="splitContainer5.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="RefreshLabel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
-        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
-        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
-        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
-        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
-        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
-        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
-        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
-        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
-        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
-        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
-        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
-        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
-        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
-        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
-        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
-        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
-        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
-        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
-        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
-        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
-        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
-        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
-        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
-        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
-        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
-        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
-        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
-        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
-        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
-        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
-        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
-        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
-        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
-        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
-        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
-        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
-        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
-        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
-        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
-        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
-        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
-        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
-        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
-        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEwAACxMBAJqcGAAABvdJREFUeF7l2lmoVVUY
-        B/DTrHW9XgsyrcxsIIigemiAoMCKvOcW3qtFgzZgNFBEA0VoGVQ2kZVFAyZG4EuUDaYUQSD1ZERlGCbN
-        I0FS1EODVqf/f7f/27XX+e99Bs/tPuyHHx4/9vrW+r57zj57r31qjUaj0mywSmywSmywSmywSmywSmyw
-        SmxQ9h4cKbQP1efU+mDi4HCif5CvR2qTBmfXJs2aXZuA132p/v/+nY5xQ7AAFsKS1KI0djbGzBioj4wb
-        qA8n+XvB1SY2KK5wwWKT5C0aMA5Fz4blaMAmjNkGjTI4dvvE+sg6YP4ZcJAK6ZarTWxQXOGCxSbJCxpw
-        NBqwrG9wzncoiEUl4mKLoHFr+O5B/nmwHZ6Bc2Ac5Iprh6tNbFBc4YKFJslzDajPmYYGrBgYHG7gL54V
-        3knxhOPnAfPzr98IfA8rYAj2hFyhRVxtYoPiChcsNEkeNOAGNOB3NKDBBiC+Mw04BP+qgE8gbIJ8C8th
-        EHaHrOCYq01sUFzhogWi0An99ZG10EADkr88m4C3v4ppKrCFLWwqpQU8D64BoW/gKTgTssLF1SY2KK5w
-        wUKZ/Ej4ApK/uBpA+AwnBXXRgJUQFrCI+TvwOTwCp8JksLWJDYorXLDIY5D8F8gmnzA0N2tCSQM2wguw
-        FBan+Ho1bIYLIGwAP+9hgZ1YCrY2sUHh4AKHogm/4d/8hGzA0I4GsPjUehR1NRyWFNeOHXMdnOXvzCrY
-        F2xtYoPCwcZe8DUa0CC8zuljExDneQBNeAXFnwS+yDL5OT9j7g7cBdl4V5vYoIRJAq9DMpFrAN8FOB9s
-        RQPmohHZlaAtskjznC9C81zehZAb72oTG5Q4EVwB2WQF74INeBdMQQN0+duLBiyGeJ4iZ0BuvKtNbFCi
-        RP3wD+QmjJrwJtTQgOSKsIcN4FVgbt4S22ASZONdbWKDEiaBleAmVAM2QnLsTjUgP6dMg6Z5S/BqMRvv
-        ahMblCDJVHATCb8RkjMujUID6Etwcxfht0cy1tUmNihKAA+Dm0RGIDw+Kb7jBkQ5Ii9DOOf70f9jyTUA
-        udrEBiVNsBv8DG4Seht0bA4L511dWw0w4yO3geZ8KI2tC2Ixrjm5YXK1iQ0KB0Md3ARyPOjYJm01wIwz
-        LgXOx0boivSENFZkFtjaxAaFg+HJNJnzLoSL9OKCQ+547zhYEMXoHXBrI67d1iY2KBwMm9JkzjUQLqaY
-        K57csZ25CtzaiGu3tYkNCgbz7N/03R/gllW8oGKj04Cyr0juJk11tYkNCgbPDJLFeH0eL6a13jeAtoBb
-        I810tYkNCgbrxOOsgXgh7el9AwrvFXBNMt/VJjYoSHBjnDCQnGC61tsGPApujXSTq01sUDD4jihZ6H6I
-        F9KZ3jXgbnBrpIWuNrFBweDw4iP2AMQLGSuFDcC1wu2uNrFBQYKb44QBbkLGCxkry6BpjbxJGz9r+HpX
-        m9igIMklcdLAqxAvZKyshtz6WDzh9cWuNrFBwWBuLuQSB3h3Fi9kTKDQLSo4KFxOc7WJDQoG80LoryBZ
-        7AhoWtD/rGzTlGuf7GoTGxQMpo/SZM51EC5mLFwJbm30AdjaxAaFg4EnO5eckgkivGE5MYqNpg3g1kaP
-        ga1NbFA4GPjszSWXU0DH6lvj2iA2mo6FeD2h5FGZq01sUDgYuKlQtiGSbITCvUHsnjQ22t6CcC2hrZAc
-        52oTGxQlAG4vuUnkvej/b0A4fjQMQzhn7D5IjnW1iQ2KEkD8nL6VH2BXCHP00n7Q/Ggub39Ijne1iQ2K
-        EqSeBjdRkaMgztErH4KbU56A7HhXm9ighEmADxv+BDehcz7EOXphPbj5hA9GxkM2xtUmNihhktTp4CZ1
-        eFJ0Obp1IHAP0s0Vmg+5sa42sUGJEwG/492kzmvgcnTjPPgJ3Dyhl6BpvKtNbFCiRK2+CWL8QdMuEOfp
-        xMnAnSeXP8ZtMXvidbWJDUqagG+9dhcR6+Ze4XDgbnPZd3yM744p4PLZ2sQGJU1Qtt3UyrkQLuYi+Bi4
-        h8fHbdxxIr7mLW2rs7vzI5Q22tUmNihpggHgtT1PapvBLaLIEggX8yy447rFZnJbPJyjiatNbFBcMuCv
-        r7gDk/w6rIW1EI79FNxx3XgO9oAwv+VqExsUlyzAExw3TB6Hr8Atkr/f0/F8iOKO6dSvwFvgcC2lXG1i
-        g+KSFeAT5LOAt84sOlywPp9l22vt+Bt4e5v89q8TrjaxQXHJ2sC7R95C89KZ1+uXA+Nlj7LL8N31IHS9
-        ++RqExsUl6xDB4CeH7IBvEx1RYb+AG608Hqej+bb+pyXcbWJDYpLthP4zpgOLOoyuBXuTN0C/IjwY5T9
-        tKVXXG1ig1Vig1Vig1Vig1Vig1Vig1Vig9XRqP0LnXLb5I4lVKEAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="folderBroswerDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="HardDriveLabel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4ggbDgAXqX0juwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEWSURBVEhL
+        3ZIxSgNBGEbHxBMkaXKCIFikskojxDKnsMoZtFCTKo2NUbyRvSApAjFpBMHGzkq/N8wMm0GFnZ1AkgcP
+        9vtn9xt2ds1eci0X8rukr/JG/su5/O3hMg7ln8wlNw1sKseZ5NmVPGAQ05Xc8CZrDBJYSjpObIoYSxan
+        NqVxK+mY2BQxkyye2pRGT9LBUa9xLFl4l3UGiXC0HDFdHHngSjJ8tKkaD5KukU2OZ8mQP6EqfUnXi02i
+        Ixl8yEMGFaGDLjqPGFy4sAkvpXkqDHJLt/lyoUXIBF100h12K0vD6Ylz6E3ZgKJPpy8uZtjuDcAXe+Ic
+        etmVi5wfuSnppNvcu7AJ6TZteSf9m+SQLjrp3mmM+QHglbxulRVi/QAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
