--- a/RandomTvShow/MainForm.resx
+++ b/RandomTvShow/MainForm.resx
@@ -120,22 +120,30 @@
   <metadata name="FormTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>212, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="HardDriveLabel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
-        TUUH4ggbDgAXqX0juwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEWSURBVEhL
-        3ZIxSgNBGEbHxBMkaXKCIFikskojxDKnsMoZtFCTKo2NUbyRvSApAjFpBMHGzkq/N8wMm0GFnZ1AkgcP
-        9vtn9xt2ds1eci0X8rukr/JG/su5/O3hMg7ln8wlNw1sKseZ5NmVPGAQ05Xc8CZrDBJYSjpObIoYSxan
-        NqVxK+mY2BQxkyye2pRGT9LBUa9xLFl4l3UGiXC0HDFdHHngSjJ8tKkaD5KukU2OZ8mQP6EqfUnXi02i
-        Ixl8yEMGFaGDLjqPGFy4sAkvpXkqDHJLt/lyoUXIBF100h12K0vD6Ylz6E3ZgKJPpy8uZtjuDcAXe+Ic
-        etmVi5wfuSnppNvcu7AJ6TZteSf9m+SQLjrp3mmM+QHglbxulRVi/QAAAABJRU5ErkJggg==
-</value>
-  </data>
+  <metadata name="FormTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>212, 17</value>
+  </metadata>
   <metadata name="folderBroswerDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="ShowPlayer.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
+        AAAAAQAAAAAAAAAAAAAAAKIAAAAAAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
+        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAZgB1AGwAbAAAAAsA
+        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAAEQIAAOcB
+        AAAL
+</value>
+  </data>
+  <metadata name="FormTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>212, 17</value>
+  </metadata>
+  <metadata name="FormTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>212, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="RefreshLabel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -155,15 +163,16 @@
         jeWf3/+ChZpRB2Kzo5woFH4BXCvdk7XcGcoAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="ShowPlayer.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="HardDriveLabel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
-        AAAAAQAAAAAAAAAAAAAAAKIAAAAAAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
-        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAZgB1AGwAbAAAAAsA
-        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAAEQIAAOcB
-        AAAL
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4ggbDgAXqX0juwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEWSURBVEhL
+        3ZIxSgNBGEbHxBMkaXKCIFikskojxDKnsMoZtFCTKo2NUbyRvSApAjFpBMHGzkq/N8wMm0GFnZ1AkgcP
+        9vtn9xt2ds1eci0X8rukr/JG/su5/O3hMg7ln8wlNw1sKseZ5NmVPGAQ05Xc8CZrDBJYSjpObIoYSxan
+        NqVxK+mY2BQxkyye2pRGT9LBUa9xLFl4l3UGiXC0HDFdHHngSjJ8tKkaD5KukU2OZ8mQP6EqfUnXi02i
+        Ixl8yEMGFaGDLjqPGFy4sAkvpXkqDHJLt/lyoUXIBF100h12K0vD6Ylz6E3ZgKJPpy8uZtjuDcAXe+Ic
+        etmVi5wfuSnppNvcu7AJ6TZteSf9m+SQLjrp3mmM+QHglbxulRVi/QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
