--- a/RandomTvShow/Properties/Resources.resx
+++ b/RandomTvShow/Properties/Resources.resx
@@ -166,4 +166,10 @@
   <data name="_3_dot_alt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\3_dot_alt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="play_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\play-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="play_icon_alt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\play-icon-alt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
